--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -47,9 +47,9 @@
                     <div class="btn_Altlog" (click)="googleLog()"><i class="fab fa-google icon_adjust"></i>
                         <p class="text_body">Log in with google</p>
                     </div>
-                    <!-- <div class="btn_Altlog" (click)="githubLog()"><i class="fab fa-github-alt icon_adjust"></i>
-                    <p class="text_body">Log in with github</p>
-                </div> -->
+                    <div class="btn_Altlog" (click)="facebookLog()"><i class="fab fa-facebook icon_adjust"></i>
+                        <p class="text_body">Log in with Facebook</p>
+                    </div>
                     <img src="../assets/Asset 3.svg" (click)="hideAlternatives()" alt="" class="img_close">
                 </div>
             </div>
