--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -53,7 +53,10 @@
 .inline_calender_controls {
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    height: 3em;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #4F345A;
 }
 
 .nowPlaying {
@@ -78,13 +81,23 @@
 }
 
 .EventDescript {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2;
 }
 
 .EventTitle {
     grid-column: 1;
     grid-row: 1;
+}
+
+.EventLocation {
+    grid-row: 1;
+    grid-column: 3;
+}
+
+.EventCreator {
+    grid-row: 2;
+    grid-column: 3;
 }
 
 .nav-splash {
@@ -110,7 +123,7 @@
     display: flex;
     height: 100%;
     align-items: center;
-    width: 30em;
+    width: 33em;
     background-color: white;
     justify-content: flex-end;
     margin-right: 10px;
@@ -244,6 +257,7 @@ input:checked+.slider:before {
 .calender-switch {
     display: flex;
     align-items: center;
+    margin-right: 10px;
 }
 
 .friendbox {
@@ -355,4 +369,11 @@ input:checked+.slider:before {
     display: flex;
     width: 100%;
     justify-content: space-around;
+}
+
+.btn_refresh {
+    border-style: none;
+    background-color: #29ABE2;
+    height: 2em;
+    margin-left: 10px;
 }
