--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -3,8 +3,7 @@
         <div class="container_title">
             <h1 class="text_main text_white"> GamesList</h1>
             <img src="../assets/Asset 1.svg" class="add" (click)="showGameList()" alt="add game">
-            <h2 class="text_white text_main">favorites</h2>
-            <h2 class="text_white text_main">sortby</h2>
+            <h2 class="text_white text_main btn_compare">Compare</h2>
             <img src="../assets/Asset 3.svg" (click)="gameListOff()" alt="" class="img_close">
         </div>
         <!-- GameList -->
